# writing_loop

./: .gitignore  README.md  pyproject.toml  writing_loop.py
tests/: test_writing_loop.py
